--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=validate
